--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -17,10 +17,10 @@ format = """$env_var $all"""
 # Change the default prompt characters
 [character]
 # old config
-# success_symbol = "[](238)"
-# error_symbol = "[](238)"
-success_symbol = ""
-error_symbol = ""
+success_symbol = "[](green)"
+error_symbol = "[](red)"
+# success_symbol = ""
+# error_symbol = ""
 
 # Shows an icon that should be included by zshrc script based on the distribution or os
 [env_var.STARSHIP_DISTRO]
