--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,15 +1,11 @@
-README.txt
-install_ubuntu.sh
-install_macos.sh
-.git
-install_windows.ps1
-install_windows.txt
-devbox.*
-
+/.README.txt
+/.install_ubuntu.sh
+/.install_macos.sh
+/.git
+/.install_windows.ps1
+/.install_windows.txt
 /.devbox
 /.gitignore
 /.teller.yml
 /devbox.*
 /gcloud
-/install.sh
-/.git
