--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,14 +1,15 @@
 README.txt
-install_ubuntu.sh
-install_macos.sh
-install_ubuntu_sync.sh
-uninstall_ubuntu.sh 
 .git
-install_windows.ps1
-install_windows.txt
 .devbox
 .gitignore
 .teller.yml
-/devbox.*
+devbox.*
 gcloud
 windows
+
+install_ubuntu.sh
+install_macos.sh
+install_ubuntu_sync.sh
+uninstall_ubuntu.sh
+install_windows.ps1
+install_windows.txt 
